@@ -50,7 +50,9 @@ libraries = [
     commons_io: dependencies.module(versions.commons_io),
     commons_lang: 'commons-lang:commons-lang:2.6@jar',
     commons_collections: 'commons-collections:commons-collections:3.2.1@jar',
-    ivy: 'org.apache.ivy:ivy:2.2.0@jar',
+    ivy: dependencies.module('org.apache.ivy:ivy:2.2.0'){
+        dependency "com.jcraft:jsch:0.1.46"
+    },
     jcip: "net.jcip:jcip-annotations:1.0@jar",
 ]
 
@@ -99,15 +101,15 @@ libraries += [
         antlr: 'antlr:antlr:2.7.7@jar',
         dom4j: 'dom4j:dom4j:1.6.1@jar',
         guava: 'com.google.guava:guava:11.0.1@jar',
-        groovy: 'org.codehaus.groovy:groovy-all:1.8.4@jar',
+        groovy: 'org.codehaus.groovy:groovy-all:1.8.6@jar',
         jaxen: 'jaxen:jaxen:1.1@jar',
         jcip: "net.jcip:jcip-annotations:1.0",
-        jna: 'net.java.dev.jna:jna:3.2.2@jar',
+        jna: 'net.java.dev.jna:jna:3.2.7@jar',
         junit: 'junit:junit:4.10',
         xmlunit: 'xmlunit:xmlunit:1.3',
 ]
 
-libraries.spock = ['org.spockframework:spock-core:0.6-groovy-1.8-SNAPSHOT@jar',
+libraries.spock = ['org.spockframework:spock-core:0.6-groovy-1.8-rc-1@jar',
         libraries.groovy,
         'org.objenesis:objenesis:1.2',
         'cglib:cglib-nodep:2.2']
@@ -128,12 +130,9 @@ allprojects {
     }
 
     repositories {
-        mavenRepo(url: 'http://repo.gradle.org/gradle/libs')
-        mavenRepo(url: 'http://repository.codehaus.org/')
-        mavenRepo(url: 'http://m2repo.spockframework.org/snapshots/')
-        ivy {
-            url 'http://repo.jfrog.org/artifactory/gradle-wharf-local'
-        }
+        maven { url 'http://repo.gradle.org/gradle/libs' }
+        maven { url 'http://repository.codehaus.org/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/releases/' }
     }
 
     configurations {
@@ -365,9 +364,14 @@ gradle.taskGraph.whenReady {graph ->
 }
 
 task quickCheck {
-    def i = gradle.startParameter.taskNames.findIndexOf { it ==~ /:?quickCheck/ }
+    def i = gradle.startParameter.taskNames.findIndexOf { it ==~ /(?i):?(quickCheck|qC)/ }
     if (i >= 0) {
         gradle.startParameter.taskNames.addAll(i, ["doc:checkstyleApi", "codeQuality", "classes", "test"])
+    }
+    doFirst {
+        if (i < 0) {
+            throw new GradleException("Due to the way it is implemented, the 'quickCheck' task has to be invoked directly, and its name can only be abbreviated to 'qC'.")
+        }
     }
 }
 
@@ -448,13 +452,19 @@ task uploadAll {
 def wrapperUpdateTask = { name, label ->
     task "${name}Wrapper"(type: Wrapper) {
         doFirst {
-            try {
-                def version = new groovy.json.JsonSlurper().parseText(new URL("http://gradle.org/versions/$label").text)
-                println "updating wrapper to $label version: $version.version (downloadUrl: $version.downloadUrl)"
-                distributionUrl version.downloadUrl
-            } catch (FileNotFoundException e) {
+            def version = new groovy.json.JsonSlurper().parseText(new URL("http://services.gradle.org/versions/$label").text)
+            if (version.empty) {
                 throw new GradleException("Cannot update wrapper to '${label}' version as there is currently no version of that label")
             }
+            println "updating wrapper to $label version: $version.version (downloadUrl: $version.downloadUrl)"
+            distributionUrl version.downloadUrl
+        }
+        doLast {
+            def jvmOpts = "-Xmx1024m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8"
+            inputs.property("jvmOpts", jvmOpts)
+            def optsEnvVar = "DEFAULT_JVM_OPTS"
+            scriptFile.write scriptFile.text.replace("$optsEnvVar=\"\"", "$optsEnvVar=\"$jvmOpts\"")
+            batchScript.write batchScript.text.replace("set $optsEnvVar=", "set $optsEnvVar=$jvmOpts")
         }
     }
 }
